[#202] test: clean-up